fix mobile navbar alignment

--- a/style.css
+++ b/style.css
@@ -103,6 +103,8 @@ body {
   padding: 0;
   margin-left: 10px;
   cursor: pointer;
+  display: inline-flex;
+  align-items: center;
 }
 
 .navbar-right .icon-btn img {
@@ -1310,10 +1312,11 @@ h2 {
   .navbar-right {
     position: absolute;
     right: 24px;
-    top: 5px;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
     order: 1;
     width: auto;
-    margin-top: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
